Fix for iOS cropping of radio buttons. Apparently iOS uses background images for radio/checkboxes. Who knew!? :)

--- a/stylesheets/_formalize.sass
+++ b/stylesheets/_formalize.sass
@@ -1,3 +1,7 @@
+// Note: This file is dependent on Sass and Compass.
+// Sass = http://sass-lang.com
+// Compass = http://compass-style.org
+
 // `Widths
 //----------------------------------------------------------------------------------------------------
 
@@ -42,9 +46,6 @@ input,
 button,
 select,
 textarea
-  -moz-background-clip: padding
-  -webkit-background-clip: padding
-  background-clip: padding-box
   margin: 0
   vertical-align: middle
 
@@ -54,7 +55,8 @@ input[type="submit"],
 input[type="button"]
   -webkit-appearance: none
   +border-radius(11px)
-  background: #ddd image-url(button.png) repeat-x
+  +background-clip(padding-box)
+  background: #ddd url(../images/button.png) repeat-x
   +linear-gradient(color-stops(#fff, #ddd))
   border: 1px solid
   border-color: #ddd #bbb #999
@@ -94,6 +96,7 @@ input[type="week"]
   -webkit-appearance: none
   +border-radius(0)
   +box-sizing(border-box)
+  +background-clip(padding-box)
   background-color: #fff
   border: 1px solid
   border-color: #848484 #c1c1c1 #e1e1e1
@@ -182,7 +185,7 @@ textarea[disabled]
 .is_webkit select
   // Tweaks for Safari + Chrome.
   background:
-    image: image-url(select_arrow.gif)
+    image: url(../images/select_arrow.gif)
     repeat: no-repeat
     position: right center
   padding-right: 20px
@@ -233,7 +236,7 @@ optgroup
 
 .ie6_button,
 * html button
-  background: #ddd image-url(button.png) repeat-x
+  background: #ddd url(../images/button.png) repeat-x
   border: 1px solid
   border-color: #ddd #bbb #999
   cursor: pointer
